# chip8

./: .gitignore  .gitmodules  CMakeLists.txt  cpu.c  gmon.out  makefile  test1
.cache/clangd/index/: asm.c.4F70B6FB82EFBC54.idx  asm.h.7321F7083E6A6653.idx  cpu.c.256A327785C8D1CD.idx  cpu.h.B15BBF8C26DF88CA.idx
doc/: c8asm.1  chip8.1
src/: asm.c  asm.h  cpu.c  cpu.h  instruction.c  instructions.h
